<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repositoryDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_screen_horizontal">

    <ImageView
        android:id="@+id/ownerIconView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_m"
        android:contentDescription="@null"
        android:src="@drawable/jetbrains"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="240dp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:textAppearance="@style/TextAppearance.App.Headline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownerIconView"
        tools:text="JetBrains/kotlin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/languageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_s"
        android:textAppearance="@style/TextAppearance.App.Subtitle2"
        app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        tools:text="Written in Kotlin" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/statsCard"
        style="@style/Widget.App.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/statsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_stats"
                android:textAppearance="@style/TextAppearance.App.Subtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/starsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/stars_label"
                android:textAppearance="@style/TextAppearance.App.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statsTitle" />

            <TextView
                android:id="@+id/starsView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_s"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.App.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/centerGuideline2"
                app:layout_constraintTop_toTopOf="@id/starsLabel"
                tools:text="38530 stars" />

            <TextView
                android:id="@+id/watchersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:text="@string/watchers_label"
                android:textAppearance="@style/TextAppearance.App.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/starsLabel" />

            <TextView
                android:id="@+id/watchersView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.App.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/centerGuideline2"
                app:layout_constraintTop_toTopOf="@id/watchersLabel"
                tools:text="38530 watchers" />

            <TextView
                android:id="@+id/forksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:text="@string/forks_label"
                android:textAppearance="@style/TextAppearance.App.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/watchersLabel" />

            <TextView
                android:id="@+id/forksView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.App.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/centerGuideline2"
                app:layout_constraintTop_toTopOf="@id/forksLabel"
                tools:text="4675 forks" />

            <TextView
                android:id="@+id/openIssuesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:text="@string/open_issues_label"
                android:textAppearance="@style/TextAppearance.App.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forksLabel" />

            <TextView
                android:id="@+id/openIssuesView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.App.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/centerGuideline2"
                app:layout_constraintTop_toTopOf="@id/openIssuesLabel"
                tools:text="131 open issues" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>